fixes overflow style issue

--- a/app/debug/style.scss
+++ b/app/debug/style.scss
@@ -3,7 +3,7 @@
   background-color: #F1F1F2;
   flex: 1;
   color: #333;
-  overflow-y: scroll;
+  overflow: auto;
 
   pre {
     margin: 5px;
