--- a/app/sidebar/style.scss
+++ b/app/sidebar/style.scss
@@ -135,7 +135,7 @@ $dark-gray: #58585b;
 
 #filetree {
   margin-left: 12px;
-  overflow: scroll;
+  overflow: auto;
   flex: 1;
 
   ul {
